XUL prototype cache preference ( `nglayout.debug.disable_xul_cache`) is not updated correctly if deleted at runtime
Categories
(Core :: XUL, defect)
Tracking
()
People
(Reporter: Gijs, Assigned: Gijs)
References
Details
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
https://searchfox.org/mozilla-central/source/toolkit/content/tests/chrome/RegisterUnregisterChrome.js calls clearUserPref
, which doesn't work because we reuse the previous value as the default/fallback argument to GetBoolPref
- so if the pref is set to true
and then removed, we will keep the value as true
forever.
This is unlikely to ever happen to users, but it caused a number of test issues in that directory, and is trivial to fix.
Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Comment 3•5 years ago
|
||
bugherder |
Comment 4•5 years ago
|
||
The patch landed in nightly and beta is affected.
:Gijs, is this bug important enough to require an uplift?
If not please set status_beta
to wontfix
.
For more information, please visit auto_nag documentation.
Assignee | ||
Comment 5•5 years ago
|
||
Comment on attachment 9152768 [details]
Bug 1641866 - fix XUL cache disabling code to actually revert it, r?Mossop
Beta/Release Uplift Approval Request
- User impact if declined: n/a; testing impact would mean there'd be "surprising" test failures in some edgecases
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: n/a
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Very small change that affects a pref that doesn't appear in about:config and that users shouldn't have cause to set - and makes setting that pref more likely to have the correct effect
- String changes made/needed: None
Comment 6•5 years ago
|
||
Comment on attachment 9152768 [details]
Bug 1641866 - fix XUL cache disabling code to actually revert it, r?Mossop
approved for 78.0b5
Comment 7•5 years ago
|
||
bugherder uplift |
Description
•