Bug 1641866 - fix XUL cache disabling code to actually revert it. r=mossop, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D77485